src/tests/krate/publish/snapshots/all__krate__publish__similar_names__new_crate_similar_name_underscore.snap
---
source: src/tests/krate/publish/similar_names.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "crate was previously named `foo-bar-underscore`"
    }
  ]
}
